--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -14,4 +14,12 @@ spring.cloud.gateway.discovery.locator.enabled=true
 # замена символов запроса верхнего регистра на нижний - игнорирование регистра
 spring.cloud.gateway.discovery.locator.lower-case-service-id=true
 
+# Настройка ручного перенаправления запросов на нужный микросервис
+spring.cloud.gateway.routes[0].id=test
+spring.cloud.gateway.routes[0].uri=lb://eclient
+# RequestMapping("/main/) + @GetMapping("/test")
+spring.cloud.gateway.routes[0].predicates[0]=Path=/main/test
+spring.cloud.gateway.routes[0].predicates[1]=Method=GET
+
+
 
