--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -21,5 +21,12 @@ spring.cloud.gateway.routes[0].uri=lb://eclient
 spring.cloud.gateway.routes[0].predicates[0]=Path=/main/test
 spring.cloud.gateway.routes[0].predicates[1]=Method=GET
 
+# Настройка ручного перенаправления запросов на нужный микросервис
+spring.cloud.gateway.routes[1].id=anothertest
+spring.cloud.gateway.routes[1].uri=lb://another
+# RequestMapping("/main/) + @GetMapping("/test")
+spring.cloud.gateway.routes[1].predicates[0]=Path=/another_main/test
+spring.cloud.gateway.routes[1].predicates[1]=Method=GET
+
 
 
