--- a/settings.gradle
+++ b/settings.gradle
@@ -2,5 +2,6 @@ rootProject.name = 'shop-microservise'
 
 includeBuild 'eureka-server'
 includeBuild 'eureka-client'
+includeBuild 'another-client'
 includeBuild 'api-gateway'
 
