Add instance ID for testing Lad Balancer. Add @Value for controller

--- a/eureka-client/src/main/resources/application.properties
+++ b/eureka-client/src/main/resources/application.properties
@@ -10,3 +10,6 @@ eureka.client.service-url.defaultZone=http://localhost:8081/eureka
 
 # формат вывода логов
 logging.pattern.console=%C{1.} [%-5level] %d{HH:mm:ss} - %msg%n
+
+# каждый инстанс будем иметь уникальный id на сервере. ДЛя нескольких копий одного МС. Проверка работы Load Balancer
+eureka.instance.instance-id=${spring.application.name}:${random.value}
