--- a/settings.gradle
+++ b/settings.gradle
@@ -3,4 +3,5 @@ rootProject.name = 'shop-microservise'
 includeBuild 'eureka-server'
 includeBuild 'eureka-client'
 includeBuild 'api-gateway'
+includeBuild 'github-config-server'
 
