--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -1,17 +1,12 @@
-server.port=8082
+server.port=8765
 
 # id сервера eureka
 spring.application.name=api-gateway
 
 # URL куда будет происходить регистрация микросервисов
-eureka.client.service-url.defaultZone=http://localhost:8081/eureka
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 
-# формат вывода логов
-logging.pattern.console=%C{1.} [%-5level] %d{HH:mm:ss} - %msg%n
-
-# Включение маршрутизации входящих запросов
-spring.cloud.gateway.discovery.locator.enabled=true
-# замена символов запроса верхнего регистра на нижний - игнорирование регистра
-spring.cloud.gateway.discovery.locator.lower-case-service-id=true
+# Для считываиня своего файла properties
+spring.config.import=optional:configserver:http://localhost:8888
 
 
