--- a/eureka-client/src/main/resources/application.properties
+++ b/eureka-client/src/main/resources/application.properties
@@ -1,12 +1,6 @@
-
-# номер порты будет присвоен автоматом
-server.port=0
-
-# id сервера eureka
 spring.application.name=eclient
 
-# URL куда будет происходить регистрация микросервисов
-eureka.client.service-url.defaultZone=http://localhost:8081/eureka
+# Для считываиня своего файла properties
+spring.config.import=optional:configserver:http://localhost:8888
 
-# формат вывода логов
-logging.pattern.console=%C{1.} [%-5level] %d{HH:mm:ss} - %msg%n
+spring.profiles.active=micro
