--- a/eureka-server/src/main/resources/application.properties
+++ b/eureka-server/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 
-server.port=8081
+server.port=8761
 
 # id сервера eureka
 spring.application.name=eserver
@@ -8,12 +8,7 @@ spring.application.name=eserver
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
 
-# URL куда будет происходить регистрация микросервисов
-eureka.client.service-url.defaultZone=http://localhost:8081/eureka
+spring.config.import=configserver:http://localhost:8888
 
-# отключение лишних логов
-logging.level.com.netflix.eureka=OFF
-logging.level.com.netflix.discovery=OFF
 
-# формат вывода логов
-logging.pattern.console=%C{1.} [%-5level] %d{HH:mm:ss} - %msg%n
+
