--- a/order-module/src/main/resources/application.properties
+++ b/order-module/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=order-module
 # Для считываиня своего файла properties
 spring.config.import=optional:configserver:http://localhost:8888
 
-spring.profiles.active=micro
+spring.profiles.active=micro, sql
 
 
 
