--- a/settings.gradle
+++ b/settings.gradle
@@ -1,6 +1,7 @@
-rootProject.name = 'shop-microservise'
+rootProject.name = 'shop-microservice'
 
 includeBuild 'eureka-server'
+includeBuild 'entity-module'
 includeBuild 'eureka-client'
 includeBuild 'api-gateway'
 includeBuild 'github-config-server'
