--- a/user-module/build.gradle
+++ b/user-module/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     implementation 'org.springframework.cloud:spring-cloud-starter-config'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'ru.masta.entity:entity-module'
 }
 
 dependencyManagement {
