--- a/settings.gradle
+++ b/settings.gradle
@@ -7,6 +7,7 @@ includeBuild 'github-config-server'
 includeBuild 'user-module'
 includeBuild 'order-module'
 includeBuild 'entity-module'
+includeBuild 'utils-module'
 
 
 
