--- a/user-module/src/main/resources/application.properties
+++ b/user-module/src/main/resources/application.properties
@@ -3,6 +3,7 @@ spring.application.name=user-module
 # Для считываиня своего файла properties
 spring.config.import=optional:configserver:http://localhost:8888
 
-spring.profiles.active=micro, sql
+spring.profiles.active=micro, sql, rabbit
+
 
 
