--- a/order-module/build.gradle
+++ b/order-module/build.gradle
@@ -29,7 +29,7 @@ dependencies {
     implementation 'org.springframework.cloud:spring-cloud-starter-config'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    implementation 'org.springframework.boot:spring-boot-starter-test'
+    implementation 'org.springframework.cloud:spring-cloud-starter-stream-rabbit'
 
     implementation 'ru.masta.entity:entity-module'
 
