--- a/user-module/build.gradle
+++ b/user-module/build.gradle
@@ -31,7 +31,11 @@ dependencies {
     implementation 'org.springframework.cloud:spring-cloud-starter-config'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.cloud:spring-cloud-starter-stream-rabbit'
+
     implementation 'ru.masta.entity:entity-module'
+
+
 }
 
 dependencyManagement {
